--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint": "^5.14.1",
     "mavon-editor": "^2.6.17",
     "vant": "^1.3.1",
     "vue": "^2.5.17",
